test/functional/failtests/lambdas/tuple.mismatchedInferredBase.txt
TypeError: Could not use lambda func where function is not expcted
1 | func main() {
2 |     tuple<int>:x = [:(): 123];
  |                      ^ (2:22)
3 | }

